--- a/donate.html
+++ b/donate.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Support Ukno Club</h1>
   <p>If you find Ukno Club helpful, support us to keep this platform free and growing. Every contribution matters!</p>
-  <img src="assets/qr.png" alt="QR Code for Donation" width="300">
+  <img src="qr.png" alt="QR Code for Donation" width="300">
 </body>
 </html>
