--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1>Welcome to Ukno Club</h1>
   <nav>
-    <a href="courses.html">Courses</a> |
+    <a href="courses.html">Courses</a>
     <a href="donate.html">Donate Us</a>
   </nav>
-  <p>This is your one-stop platform to learn technologies using open-source material.</p>
+  <p>This is your one-stop platform to learn technologies using open-source material like YouTube.</p>
 </body>
 </html>
