--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Ukno Club – Learn with Open Resources</title>
+  <meta charset="UTF-8">
+  <title>Ukno Club – Learn Freely</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to Ukno Club</h1>
-  <nav>
-    <a href="courses.html">Courses</a>
-    <a href="donate.html">Donate Us</a>
-  </nav>
-  <p>This is your one-stop platform to learn technologies using open-source material like YouTube.</p>
+  <div class="container">
+    <div class="left">
+      <h1><span class="green">UKNO</span> <span class="outlined">CLUB</span><span class="symbol">?</span></h1>
+      <p class="tagline"><span class="green">Knowledge</span> Everywhere.</p>
+      <div class="socials">
+        <a href="#"><img src="assets/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="assets/x.png" alt="Twitter"></a>
+        <a href="#"><img src="assets/youtube.png" alt="YouTube"></a>
+        <a href="#"><img src="assets/instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="assets/linkedin.png" alt="LinkedIn"></a>
+
+      </div>
+    </div>
+
+    <div class="right">
+      <div class="steps">
+        <div>1<br><span>USERNAME & PASSWORD</span></div>
+        <div class="active">2<br><span>ACCOUNT SETUP</span></div>
+        <div>3<br><span>START LEARNING</span></div>
+      </div>
+
+      <form>
+        <input type="email" placeholder="EMAIL" required>
+        <input type="password" placeholder="PASSWORD" required>
+        <input type="password" placeholder="CONFIRM PASSWORD" required>
+        <p class="password-note">Your password must be at least 10 characters long and must contain one uppercase letter, one lowercase letter, and one number or symbol.</p>
+        <button type="submit">CREATE ACCOUNT</button>
+        <p class="privacy">We always protect your privacy, and will not share your information.</p>
+        <p class="login">Already have an account? <a href="#">Login</a></p>
+      </form>
+    </div>
+  </div>
+
+  <section class="objective">
+    <h2>Our Objective</h2>
+    <p>Ukno Club aims to be a one-stop solution for learning new technologies using the best open-source content from the internet. We believe in accessible, AI-enhanced education powered by platforms like YouTube and community-driven learning tools.</p>
+    <h3>Mission</h3>
+    <p>To democratize learning by making high-quality, curated tech education available to everyone — free, organized, and trackable.</p>
+    <h3>Vision</h3>
+    <p>To become India’s most trusted free learning hub for tech aspirants, helping learners grow with YouTube, AI tools, and real-world project exposure.</p>
+  </section>
 </body>
 </html>
