--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <h1 class="ukno">UKNO</h1>
-      <h2 class="club">CLUB</h2>
-      <h3 class="tagline">Learn <span class="freely">Freely</span></h3>
+      <img src="assets/1.png" alt="UKNO CLUB Learn Freely" />
     </div>
     <div class="menu">
       <a href="login.html" class="btn">SIGN UP/ LOG IN</a>
