--- a/signup.html
+++ b/signup.html
@@ -14,12 +14,26 @@
     <div class="right">
       <form class="signup-form">
         <h1 class="title">SIGNUP</h1>
+
         <div class="input-row">
           <input type="text" placeholder="FIRST NAME" required />
           <input type="text" placeholder="LAST NAME" required />
         </div>
+
         <div class="input-row">
           <input type="email" placeholder="EMAIL ID" required />
           <input type="text" placeholder="USERNAME" required />
         </div>
-        <button type="submit" class="btn">CREATE ACCOUNT
+
+        <div class="input-row">
+          <input type="password" placeholder="PASSWORD" required />
+          <input type="password" placeholder="CONFIRM PASSWORD" required />
+        </div>
+
+        <button type="submit" class="btn">CREATE ACCOUNT</button>
+        <button type="button" class="btn">LOG IN</button>
+      </form>
+    </div>
+  </div>
+</body>
+</html>
