--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="assets/1.png" alt="UKNO CLUB Learn Freely" />
     </div>
     <div class="menu">
-        <a href="signup.html" class="nav-button">SIGN UP/ LOG IN</a>
+      <a href="auth.html">SIGN UP / LOG IN</a>
       <a href="courses.html" class="btn">CONTENT</a>
       <a href="donate.html" class="btn">DONATE US</a>
       <a href="feedback.html" class="btn">FEEDBACK</a>
