--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ukno Club – Learn Freely</title>
+  <title>Ukno Club</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet"/>
 </head>
 <body>
   <div class="container">
     <div class="logo">
-      <img src="assets/1.png" alt="UKNO CLUB Learn Freely" />
+      <img src="a26526a0-bcd0-4385-975a-b90b2a9af51a.png" alt="UKNO CLUB Logo"/>
     </div>
     <div class="menu">
-      <a href="auth.html">SIGN UP / LOG IN</a>
-      <a href="courses.html" class="btn">CONTENT</a>
-      <a href="donate.html" class="btn">DONATE US</a>
-      <a href="feedback.html" class="btn">FEEDBACK</a>
+      <a href="auth.html" class="btn">SIGN UP / LOG IN</a>
+      <a href="#" class="btn">CONTENT</a>
+      <a href="#" class="btn">DONATE US</a>
+      <a href="#" class="btn">FEEDBACK</a>
     </div>
   </div>
 </body>
