--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <div class="menu">
       <a href="auth.html" class="btn">SIGN UP / LOG IN</a>
-      <a href="#" class="btn">CONTENT</a>
-      <a href="#" class="btn">DONATE US</a>
+      <a href="courses.html" class="btn">CONTENT</a>
+      <a href="donate.html" class="btn">DONATE US</a>
       <a href="#" class="btn">FEEDBACK</a>
     </div>
   </div>
