--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="auth.html" class="btn">SIGN UP / LOG IN</a>
       <a href="courses.html" class="btn">CONTENT</a>
       <a href="donate.html" class="btn">DONATE US</a>
-      <a href="#" class="btn">FEEDBACK</a>
+      <a href="feedback.html" class="btn">FEEDBACK</a>
     </div>
   </div>
 </body>
