--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="a26526a0-bcd0-4385-975a-b90b2a9af51a.png" alt="UKNO CLUB Logo"/>
+      <img src="1.png" alt="UKNO CLUB Logo"/>
     </div>
     <div class="menu">
       <a href="auth.html" class="btn">SIGN UP / LOG IN</a>
@@ -18,6 +18,14 @@
       <a href="donate.html" class="btn">DONATE US</a>
       <a href="feedback.html" class="btn">FEEDBACK</a>
     </div>
+    <section class="hero-message">
+      <h1>Empowering Learners, Freely</h1>
+      <p>
+        At <strong>Ukno Club</strong>, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. 
+        We bring together curated content, progress tracking, and smart note-taking to create a focused learning experience. 
+        Sign up, learn freely, and grow with a community that believes in education for everyone.
+      </p>
+    </section>    
   </div>
 </body>
 </html>
