--- a/index.html
+++ b/index.html
@@ -1,31 +1,344 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ukno Club</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ukno Club - Learn Freely</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #2F303A;
+            color: #fff;
+            font-family: 'Roboto', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow-x: hidden;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 1535px;
+            height: auto;
+            min-height: 789px;
+            border-radius: 10px;
+            box-sizing: border-box;
+            position: relative;
+            overflow: visible;
+        }
+
+        .background-image {
+            position: absolute;
+            top: -27px;
+            left: -45px;
+            width: 1627px;
+            height: 679px;
+            background: url(Untitled_design__2_-removebg-preview.png);
+            background-size: cover;
+            background-position: center;
+            mix-blend-mode: lighten;
+            border: 1px solid #000000;
+            border-radius: 10px;
+            z-index: -1;
+        }
+
+        .logo-section {
+            position: absolute;
+            top: 69px;
+            left: 139px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .logo-img {
+            max-width: 285px;
+            height: auto;
+        }
+
+        .club-text {
+            position: absolute;
+            top: 187px;
+            left: 157px;
+            font-family: 'Roboto', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 96px;
+            line-height: 112px;
+            color: #FFFFFF;
+        }
+
+        .rectangle-24 {
+            position: absolute;
+            width: 250px;
+            height: 78px;
+            left: 150px;
+            top: 203px;
+            border: 7px solid #FFFFFF;
+            border-radius: 10px;
+        }
+
+        .learn-freely-text {
+            position: absolute;
+            top: 345px;
+            left: 145px;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 36px;
+            line-height: 54px;
+            color: #F52929;
+        }
+
+        .signup-login-button {
+            position: absolute;
+            top: 124px;
+            left: 981px;
+            width: 224px;
+            height: 35px;
+            background: #F52929;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 27px;
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+
+        .about-us-button {
+            position: absolute;
+            top: 201px;
+            left: 981px;
+            width: 224px;
+            height: 35px;
+            background: #F52929;
+            border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 27px;
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+
+        .empowering-learners-text {
+            position: absolute;
+            top: 312px;
+            left: 768px;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 54px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+
+        .mission-text {
+            position: absolute;
+            top: 382px;
+            left: 838px;
+            width: 481px;
+            font-family: 'Poppins', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+
+        .social-icons {
+            position: absolute;
+            left: 145px;
+            top: 518px;
+            display: flex;
+            gap: 10px;
+        }
+
+        .social-icon {
+            width: 45.19px;
+            height: 49.37px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.1);
+        }
+
+        .youtube {
+            background: #F52929;
+        }
+
+        .instagram {
+            background: linear-gradient(180.19deg, #7024C4 0.17%, #C21975 41.57%, #C74C4D 70.15%, #E09B3D 99.83%);
+        }
+
+        .linkedin {
+            background: #007AB7;
+        }
+
+        .telegram {
+            background: #45AEE4;
+        }
+
+        .social-icon img {
+            width: 20px;
+            height: auto;
+        }
+
+        .youtube img {
+            width: 20.85px;
+            height: 17.72px;
+        }
+
+        .instagram img {
+            width: 19.7px;
+            height: 21.52px;
+        }
+
+        .linkedin img {
+            width: 16.22px;
+            height: 17.72px;
+        }
+
+        .telegram img {
+            width: 20px;
+            height: 20.06px;
+        }
+
+        .data-section {
+            position: absolute;
+            top: 679px;
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+        }
+
+        .data-category {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: #FFFFFF;
+            font-family: 'Poppins', sans-serif;
+            font-size: 24px;
+            line-height: 36px;
+            text-transform: capitalize;
+        }
+
+        .category-image-container {
+            position: relative;
+            width: 58px;
+            height: 81px;
+        }
+
+        .category-image {
+            background: url(Untitled_design__2_-removebg-preview.png);
+            background-size: contain;
+            width: 100%;
+            height: 100%;
+        }
+
+        .category-bar {
+            position: absolute;
+            top: 679.5px;
+            left: 217.5px;
+            width: 8px;
+            height: 34.5px;
+            background: #F52929;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">
-      <img src="1.png" alt="UKNO CLUB Logo"/>
+    <div class="container">
+        <div class="background-image"></div>
+        <div class="logo-section">
+            <img src="logo.png" alt="Ukno Club Logo" class="logo-img">
+        </div>
+        <div class="club-text">CLUB</div>
+        <div class="rectangle-24"></div>
+        <div class="learn-freely-text">Learn Freely</div>
+        <a href="#" class="signup-login-button">Sign up/Log in</a>
+        <a href="#" class="about-us-button">About Us</a>
+        <div class="empowering-learners-text">Empowering Learners, Freely</div>
+        <div class="mission-text">
+            At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.
+        </div>
+        <div class="social-icons">
+            <div class="social-icon youtube">
+                <img src="youtube-icon.png" alt="YouTube">
+            </div>
+            <div class="social-icon instagram">
+                <img src="instagram-icon.png" alt="Instagram">
+            </div>
+            <div class="social-icon linkedin">
+                <img src="linkedin-icon.png" alt="LinkedIn">
+            </div>
+            <div class="social-icon telegram">
+                <img src="telegram-icon.png" alt="Telegram">
+            </div>
+        </div>
+
+        <div class="data-section">
+            <div class="data-category">
+                Data Analytics
+                <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+            <div class="data-category">
+                Business Analyst
+                <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+            <div class="data-category">
+                Data Science
+                 <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+            <div class="data-category">
+                Big Data
+                 <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+            <div class="data-category">
+                AI & ML
+                 <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+             <div class="data-category">
+                Deep Learning
+                 <div class="category-image-container">
+                    <div class="category-image"></div>
+                    <div class="category-bar"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="menu">
-      <a href="auth.html" class="btn">SIGN UP / LOG IN</a>
-      <a href="courses.html" class="btn">CONTENT</a>
-      <a href="donate.html" class="btn">DONATE US</a>
-      <a href="feedback.html" class="btn">FEEDBACK</a>
-    </div>
-    <section class="hero-message">
-      <h1>Empowering Learners, Freely</h1>
-      <p>
-        At <strong>Ukno Club</strong>, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. 
-        We bring together curated content, progress tracking, and smart note-taking to create a focused learning experience. 
-        Sign up, learn freely, and grow with a community that believes in education for everyone.
-      </p>
-    </section>    
-  </div>
+    <script>
+        const logo = document.querySelector('.logo-img');
+        logo.src = 'logo.png';
+    </script>
 </body>
 </html>
