--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="logo.png" alt="Ukno Club Logo" class="logo-img">
+            <img src="assets/logo.png" alt="Ukno Club Logo" class="logo-img">
         </div>
         <div class="club-text">CLUB</div>
         <div class="rectangle-24"></div>
@@ -247,37 +247,37 @@
             <div class="data-category">
                 Data Analytics
                 <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
             <div class="data-category">
                 Business Analyst
                  <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
             <div class="data-category">
                 Data Science
                  <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
             <div class="data-category">
                 Big Data
                  <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
             <div class="data-category">
                 AI & ML
                  <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
              <div class="data-category">
                 Deep Learning
                  <div class="category-image-container">
-                    <img src="qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
+                    <img src="assets/qm.png" alt="Question Mark" style="position: absolute; left: 20px; bottom: 20px; width: 20px; height: 20px;">
                 </div>
             </div>
         </div>
