--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="landing-page">
+    <!-- Logo and tagline -->
     <div class="logo-box">
       <h1 class="logo-main">UKNO</h1>
       <div class="club-box">
@@ -17,7 +18,21 @@
       </div>
       <p class="tagline">Learn Freely!</p>
     </div>
-    
+
+    <!-- Navigation Buttons -->
+    <div class="nav-buttons">
+      <a href="#" class="nav-btn">SIGN UP / LOG IN</a>
+      <a href="#" class="nav-btn">CONTENT</a>
+      <a href="#" class="nav-btn">DONATE US</a>
+      <a href="#" class="nav-btn">FEEDBACK</a>
+    </div>
+
+    <!-- Center Content -->
+    <div class="center-content">
+      <h2 class="headline">Empowering Learners Everywhere</h2>
+      <p class="subtext">Curated open-source content for free learning with AI tools.</p>
+      <img src="./assets/images/learning-guy.png" alt="Learning Illustration" class="hero-image"/>
+    </div>
   </div>
 </body>
 </html>
